--- a/css/style.css
+++ b/css/style.css
@@ -426,7 +426,7 @@ table {
 /*=============================================================*/
 .block-text {
     max-width: 100%;
-    padding: 108px 127px 0 0;
+    padding: 110px 0;
     margin: 0 0 0 0;   
 }
 @media (max-width: 991.98px){
@@ -463,7 +463,6 @@ padding: 0 0 51px 0;
 .block-text__text {
     max-width: 100%;
     padding-bottom: 136px;
-
     font-family: 'Montserrat' , sans-serif;
     font-style: normal;
     font-weight: 400;
@@ -474,6 +473,12 @@ padding: 0 0 51px 0;
 color: rgba(0, 0, 0, 0.8);
 align-content: center;
 }
+@media( max-width: 768.98px){
+    .block-text__text{
+        padding-bottom: 60px;
+    }
+
+}
 
 .button_rg{
     max-width: 100%;
@@ -481,6 +486,7 @@ align-content: center;
     display: flex;
     justify-content: center;
 }
+
 .Block-text__button {
     width: 325px;
     max-width: 100%;
@@ -515,7 +521,6 @@ align-content: center;
     
     background-color: #009A63 3%;
     padding-bottom: 15px;
-    height: 1125px;
     margin: 0 1px;
     object-fit: cover;
    /* background: url('img/pg1/left22.svg') -300% 0 no-repeat 
@@ -529,11 +534,15 @@ align-content: center;
 .get-bg__background{
     background: url(/img/pg1/Group26.svg) no-repeat;
     background-position: center center;
-    background-size: cover;
+    background-size: contain;
     background-attachment: local;
     min-width: 10%;
 }
-
+@media (max-width: 1020.98px){
+    .get-bg__background{
+        background-position: center bottom 30%;
+    }
+}
 
 .get-started__container {
     align-items: center;
@@ -557,6 +566,11 @@ padding: 0 0 15px 0;
     display: flex;
 justify-content: center;
 padding: 100px 0 275px 0;
+}
+@media( max-width: 768.98px){
+    .get-started__arrow{
+        padding: 150px 0;
+    }
 }
 
 .get-started__image {
@@ -614,7 +628,14 @@ padding: 0 0 0 0;
   background-position: center center;
   background-size: contain;
   background-attachment: local;
-
+}
+@media (max-width: 912.98px){
+    .tehnikal__background{
+        background: url(//img/pg1/Right2.svg) no-repeat;
+        background-position: center center;
+  background-size: contain;
+  background-attachment: local;
+    }
 }
 
 .titel_teh{
@@ -625,10 +646,12 @@ padding: 0 0 0 0;
     font-style: normal;
     font-weight: 700;
     font-size: 48px;
-    line-height: 55px;
-    
+    line-height: 55px;    
+    font-size: clamp(32px, 2vw, 48px);
+    text-align: center;
 }
-@media (max-width: 480.98px){
+
+/*@media (max-width: 480.98px){
     .titel_teh{
         font-size: 46px;
         line-height: 34px;
@@ -639,14 +662,15 @@ padding: 0 0 0 0;
         font-size: 43px;
         line-height: 34px;
     }
-}
+}*/
 .colortext{
     color: rgba(154, 0, 55, 0.9)
 }
 
 /*=====================================================================*/
 .abzac__content {
-    padding: 120px 120px 120px 50px;
+    padding: 120px 120px;
+    text-align: start;
 }
 @media (max-width: 991.98px){
     .abzac__content{
@@ -656,14 +680,21 @@ padding: 0 0 0 0;
 .abzac__container {
     display: flex;
     align-items: flex-start;
-    min-height: 166px;
     padding-right: 42px;
-
+}
+@media (max-width: 800.98px){
+    .abzac__container{
+        padding-right: 0px;
+    }
 }
 
 .technikal-ring__icon {
-    max-width: 100%;
-    
+    max-width: 100%;    
+}
+@media(max-width: 800.98px){
+    .technikal-ring__icon{
+        display: none;
+    }
 }
 
 .teh-block-text__body {
@@ -673,7 +704,7 @@ padding: 0 0 0 0;
 }
 @media (max-width: 991.98px){
     .teh-block-text__body{
-        margin-top: 0;
+        margin: 0 0 20px 0;
     }
 }
 
@@ -685,6 +716,11 @@ font-weight: 700;
 font-size: 36px;
 line-height: 41px;
 }
+@media(max-width: 800.98px){
+    .teh-block-text__title{
+        font-size: 21px;
+    }
+}
 
 .teh-block-text {
     padding-top: 31px;
@@ -694,9 +730,15 @@ line-height: 41px;
     font-weight: 500;
     font-size: 28px;
     line-height: 34px;
-    
+    font-size: clamp(16px, 3vw, 28px);
     color: rgba(0, 0, 0, 0.7)
 }
+@media(max-width: 800.98px){
+    .teh-block-text{
+        padding-top: 0px;
+    }
+}
+
 .nowrap{
     white-space: nowrap;
 }
@@ -725,9 +767,10 @@ font-size: 42px;
 line-height: 55px;
 color: rgba(255, 255, 255, 0.9);
 }
-@media (max-width: 809.98px){
+@media (max-width: 820.98px){
     .dack-form__content{
         display: block;
+        font-size: 25px;
     }
 }
 
@@ -789,7 +832,7 @@ filter: drop-shadow(0px 5px 25px rgba(0, 154, 99, 0.5));
 }
 
 .requir-form {
-    padding: 115px 0px 0 0px;
+    padding: 115px 0px;
     justify-content: center;
     width: 683px;
     max-width: 100%;
@@ -800,6 +843,11 @@ font-size: 56px;
 line-height: 64px;
 text-align: center;
 color: rgba(255, 255, 255, 0.9);
+}
+@media(max-width: 820.98px){
+    .requir-form{
+        margin: auto;
+    }
 }
 
 .requir-input {
@@ -823,13 +871,27 @@ color: rgba(255, 255, 255, 0.9);
     color: rgba(154, 0, 55, 0.9);
     opacity: 1;
 }
+@media(max-width: 820.98px){
+    .requir-input{
+        max-width: 90%;
+        margin: 0 0 0 0;
+        padding-left: 2px;
+        height: 32px;
+    }
+
+}
 
 .bc-border-button{
     margin-top: 50px;
 }
+@media(max-width: 820.98px){
+    .bc-border-button{
+        margin: 20px 10px 0 10px;
+    }
+}
 
 .bc-button {
-    width: 450px;
+    width: 495px;
     display: inline-block;
     font-family: 'Sansation';
     font-style: normal;
@@ -842,6 +904,12 @@ color: rgba(255, 255, 255, 0.9);
     background-color: rgba(154, 0, 55, 1);
     transition: background-color 0.3s ease 0s;
     text-decoration: none;
+}
+@media(max-width: 820.98px){
+    .bc-button{
+        margin: 0 0;
+        max-width: 100%;
+    }
 }
 
 .bc-button:hover {
@@ -859,7 +927,6 @@ box-shadow: 0px 5px 25px rgba(154, 0, 55, 0.5);
 
 .footer {
     margin-top: 100px;
-    height: 386px;
     background-color: rgba(0, 154, 99, 0.3);
 }
 
@@ -869,17 +936,22 @@ box-shadow: 0px 5px 25px rgba(154, 0, 55, 0.5);
 
 .footer__content {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
 }
 .footer__logo {
-    padding: 0px 140px 0px 0px ;
+    padding: 0px 0px 0px 0px ;
 }
 .footer__menu {
     display: flex;
     justify-content: column;
-    padding: 100px 50px 100px 0px;
 }
+@media(max-width:820.98px){
+    .footer__menu{
+        display: none;
+    }
+}
+
 
 .fmenu__list {
     display: flex;
@@ -903,8 +975,12 @@ font-feature-settings: 'tnum' 1, 'lnum' 1;
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 300px;
-    padding: 1px 140px 250px 50px; 
+    padding: 1px 0px 200px 50px; 
+}
+@media(max-width: 820.98px){
+    .scroller-up{
+        padding: 0;
+    }    
 }
 .scroler-up{
     display: flex;
@@ -925,12 +1001,16 @@ font-feature-settings: 'tnum' 1, 'lnum' 1;
     font-feature-settings: 'tnum' 1, 'lnum' 1;
     text-decoration: none;
 }
+@media(max-width:820.98px){
+    .scrolerup{
+        width: 200px;
+    }
+}
 .footor_TG {
     padding: 0 65px 0 30;
 }
 
 .back_call {
-    padding: 60px 10px;
     font-family: 'Sansation';
 font-style: normal;
 font-weight: 700;
@@ -938,6 +1018,11 @@ font-size: 24px;
 line-height: 28px;
 color: rgba(0, 0, 0, 0.54);
 text-align: center;
+}
+@media(max-width:820.98px){
+    .back_call{
+        display: none;
+    }
 }
 
 .button_green {
@@ -949,7 +1034,6 @@ text-align: center;
     line-height: 29px;
     letter-spacing: 0.5px;
     color: rgba(0, 0, 0, 0.9);
-    margin: 0 60px;
     padding: 25px 50px;
     background-color: rgba(0, 154, 99, 0.7);
     border: 2px solid rgba(0, 0, 0, 0.54);
@@ -974,6 +1058,5 @@ font-size: 18px;
 line-height: 22px;
 text-decoration: none;
 color: #000000;
-padding: 0px 10px 50px 80px;
 justify-content: baseline;
 }
