--- a/css/style.css
+++ b/css/style.css
@@ -758,6 +758,11 @@ box-shadow: 0px 5px 35px rgba(0, 154, 99, 0.5);
     display: flex;
     flex: 1 1 40%;
 }
+@media(max-width:820.98px){
+    .dack-form__content{
+        flex-direction: column;
+    }
+}
 .requir__container {
     padding: 80px 25px 80px 25px;
     font-family: 'Sansation';
@@ -768,7 +773,7 @@ line-height: 55px;
 color: rgba(255, 255, 255, 0.9);
 }
 @media (max-width: 820.98px){
-    .dack-form__content{
+    .requir__container{
         display: block;
         font-size: 25px;
     }
@@ -780,6 +785,11 @@ color: rgba(255, 255, 255, 0.9);
 }
 .requir-box__content{
     padding: 80px 0 0 0;
+}
+@media(max-width: 820.98px){
+    .requir-box__content{
+    padding: 0 0;
+    }
 }
 
 .requir_num {
@@ -822,13 +832,17 @@ color: rgba(255, 255, 255, 0.9);
 opacity: 0.9;
     padding-bottom: 80px;
     padding-left: 40px;
-
 }
 
 .border-box{
     margin: -40px 0px -40px 0;
     border: 3px solid rgba(0, 0, 0, 0.54);
 filter: drop-shadow(0px 5px 25px rgba(0, 154, 99, 0.5));
+}
+@media(max-width:820.98px){
+    .border-box{
+        margin: 0;
+    }
 }
 
 .requir-form {
